--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>859</width>
+    <width>930</width>
     <height>631</height>
    </rect>
   </property>
@@ -411,132 +411,6 @@
       <attribute name="title">
        <string>Users data</string>
       </attribute>
-      <widget class="QPushButton" name="createCatalogButton">
-       <property name="geometry">
-        <rect>
-         <x>559</x>
-         <y>14</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Create mosaic</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="uploadImageToCatalogButton">
-       <property name="geometry">
-        <rect>
-         <x>559</x>
-         <y>78</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Upload images to
-selected mosaic</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="uploadImageToNewCatalogButton">
-       <property name="geometry">
-        <rect>
-         <x>691</x>
-         <y>78</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Upload image to
-new mosaic</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="deleteCatalogButton">
-       <property name="geometry">
-        <rect>
-         <x>559</x>
-         <y>141</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Delete mosaic</string>
-       </property>
-      </widget>
-      <widget class="QTableWidget" name="mosaicsTableWidget">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>14</y>
-         <width>541</width>
-         <height>181</height>
-        </rect>
-       </property>
-       <property name="editTriggers">
-        <set>QAbstractItemView::NoEditTriggers</set>
-       </property>
-       <property name="selectionMode">
-        <enum>QAbstractItemView::SingleSelection</enum>
-       </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectRows</enum>
-       </property>
-       <attribute name="horizontalHeaderDefaultSectionSize">
-        <number>120</number>
-       </attribute>
-       <attribute name="horizontalHeaderStretchLastSection">
-        <bool>true</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string>Catalog id</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Name</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Tags</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Created at</string>
-        </property>
-       </column>
-      </widget>
-      <widget class="QPushButton" name="editSelectedCatalogButton">
-       <property name="geometry">
-        <rect>
-         <x>691</x>
-         <y>14</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Edit selected
-mosaic</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="loadUserMosaicsButton">
-       <property name="geometry">
-        <rect>
-         <x>692</x>
-         <y>141</y>
-         <width>125</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Show mosaics</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="selectedCatalogImagesLabel">
        <property name="geometry">
         <rect>
@@ -562,11 +436,17 @@ mosaic</string>
        <property name="editTriggers">
         <set>QAbstractItemView::NoEditTriggers</set>
        </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <property name="sortingEnabled">
+        <bool>true</bool>
        </property>
        <attribute name="horizontalHeaderDefaultSectionSize">
         <number>150</number>
@@ -678,6 +558,177 @@ image/images</string>
        <property name="text">
         <string>Mosaic preview</string>
        </property>
+      </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>8</y>
+         <width>879</width>
+         <height>190</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0">
+        <property name="spacing">
+         <number>12</number>
+        </property>
+        <property name="sizeConstraint">
+         <enum>QLayout::SetDefaultConstraint</enum>
+        </property>
+        <item>
+         <widget class="QTableWidget" name="mosaicsTableWidget">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>600</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>120</number>
+          </attribute>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <column>
+           <property name="text">
+            <string>Catalog id</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Tags</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Created at</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="spacing">
+           <number>12</number>
+          </property>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout">
+            <property name="spacing">
+             <number>10</number>
+            </property>
+            <item>
+             <widget class="QPushButton" name="createCatalogButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Create mosaic</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="uploadImageToCatalogButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Upload images to
+selected mosaic</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="deleteCatalogButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Delete mosaic</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QVBoxLayout" name="verticalLayout_2">
+            <property name="spacing">
+             <number>10</number>
+            </property>
+            <item>
+             <widget class="QPushButton" name="editSelectedCatalogButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Edit selected
+mosaic</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="uploadImageToNewCatalogButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Upload image to
+new mosaic</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="loadUserMosaicsButton">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Show mosaics</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </widget>
      </widget>
      <widget class="QWidget" name="providersTab">
