--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1055,20 +1055,20 @@
                  <property name="minimumSize">
                   <size>
                    <width>200</width>
-                   <height>0</height>
+                   <height>36</height>
                   </size>
                  </property>
                  <property name="maximumSize">
                   <size>
                    <width>380</width>
-                   <height>16777215</height>
+                   <height>36</height>
                   </size>
                  </property>
                  <property name="text">
                   <string/>
                  </property>
                  <property name="alignment">
-                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                  <set>Qt::AlignCenter</set>
                  </property>
                 </widget>
                </item>
@@ -1122,7 +1122,7 @@
            <property name="minimumSize">
             <size>
              <width>340</width>
-             <height>0</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
