--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -790,7 +790,7 @@
            <property name="minimumSize">
             <size>
              <width>330</width>
-             <height>243</height>
+             <height>253</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -811,7 +811,7 @@
               <x>4</x>
               <y>6</y>
               <width>330</width>
-              <height>221</height>
+              <height>245</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -937,7 +937,7 @@
                   <property name="minimumSize">
                    <size>
                     <width>100</width>
-                    <height>0</height>
+                    <height>20</height>
                    </size>
                   </property>
                   <property name="maximumSize">
@@ -955,6 +955,22 @@
                    <string/>
                   </property>
                  </widget>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="processingCostLabel">
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignHCenter|Qt::AlignTop</set>
+                 </property>
                 </widget>
                </item>
               </layout>
