--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>1040</width>
-    <height>698</height>
+    <height>720</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>720</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string notr="true">Mapflow</string>
@@ -1259,13 +1265,13 @@
         <x>5</x>
         <y>436</y>
         <width>342</width>
-        <height>218</height>
+        <height>260</height>
        </rect>
       </property>
       <property name="minimumSize">
        <size>
         <width>342</width>
-        <height>218</height>
+        <height>260</height>
        </size>
       </property>
       <property name="title">
@@ -1275,9 +1281,9 @@
        <bool>true</bool>
       </property>
       <property name="collapsed">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="processingIdForRatingLabel">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -1288,14 +1294,14 @@
        </property>
        <property name="text">
         <string>Processing ID: 
-b76a4979-9d43-45cb-9f85-313ed46daf1a</string>
+</string>
        </property>
       </widget>
       <widget class="QPushButton" name="ratingSubmitButton">
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>180</y>
+         <y>230</y>
          <width>89</width>
          <height>25</height>
         </rect>
@@ -1315,7 +1321,7 @@ b76a4979-9d43-45cb-9f85-313ed46daf1a</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_8">
         <item>
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="selectedProcessingNameLabel">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -1324,7 +1330,7 @@ b76a4979-9d43-45cb-9f85-313ed46daf1a</string>
           </property>
           <property name="text">
            <string>Processing name: 
-Test processing</string>
+</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -1332,10 +1338,10 @@ Test processing</string>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="selectedProcessingCurrentRatingLabel">
           <property name="text">
            <string>Current rating: 
-5</string>
+</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -1350,73 +1356,68 @@ Test processing</string>
          <x>10</x>
          <y>113</y>
          <width>321</width>
-         <height>27</height>
+         <height>111</height>
         </rect>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_9">
+       <layout class="QVBoxLayout" name="verticalLayout_8">
         <item>
-         <widget class="QLabel" name="label_4">
+         <layout class="QHBoxLayout" name="horizontalLayout_9">
+          <item>
+           <widget class="QLabel" name="chooseNewRatingLabel">
+            <property name="minimumSize">
+             <size>
+              <width>220</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Choose new rating:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QComboBox" name="processingRatingsCombobox">
+            <item>
+             <property name="text">
+              <string>5</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>4</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>3</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>1</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QTextEdit" name="processingRatingFeedbackText">
           <property name="minimumSize">
            <size>
-            <width>220</width>
-            <height>0</height>
+            <width>0</width>
+            <height>70</height>
            </size>
           </property>
-          <property name="text">
-           <string>Choose new rating:</string>
+          <property name="placeholderText">
+           <string>Type your feedback here</string>
           </property>
          </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="processingRatingsCombobox">
-          <item>
-           <property name="text">
-            <string>5</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>4</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>3</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>2</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>1</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="layoutWidget">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>141</y>
-         <width>321</width>
-         <height>27</height>
-        </rect>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_10">
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Feedback</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="processingRatingFeedbackLineEdit"/>
         </item>
        </layout>
       </widget>
