--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>1040</width>
-    <height>720</height>
+    <height>698</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>720</height>
+    <height>690</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -1265,13 +1265,19 @@
         <x>5</x>
         <y>436</y>
         <width>342</width>
-        <height>260</height>
+        <height>210</height>
        </rect>
       </property>
       <property name="minimumSize">
        <size>
         <width>342</width>
-        <height>260</height>
+        <height>210</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>23</height>
        </size>
       </property>
       <property name="title">
@@ -1281,27 +1287,13 @@
        <bool>true</bool>
       </property>
       <property name="collapsed">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
-      <widget class="QLabel" name="processingIdForRatingLabel">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>321</width>
-         <height>34</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Processing ID: 
-</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="ratingSubmitButton">
        <property name="geometry">
         <rect>
          <x>120</x>
-         <y>230</y>
+         <y>176</y>
          <width>89</width>
          <height>25</height>
         </rect>
@@ -1313,111 +1305,126 @@
       <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>70</y>
-         <width>321</width>
-         <height>41</height>
+         <x>5</x>
+         <y>30</y>
+         <width>331</width>
+         <height>138</height>
         </rect>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <layout class="QVBoxLayout" name="verticalLayout_10">
         <item>
-         <widget class="QLabel" name="selectedProcessingNameLabel">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>36</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Processing name: 
-</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignHCenter|Qt::AlignTop</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="selectedProcessingCurrentRatingLabel">
-          <property name="text">
-           <string>Current rating: 
-</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignHCenter|Qt::AlignTop</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="QWidget" name="layoutWidget">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>113</y>
-         <width>321</width>
-         <height>111</height>
-        </rect>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout_8">
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <layout class="QVBoxLayout" name="verticalLayout_8">
           <item>
-           <widget class="QLabel" name="chooseNewRatingLabel">
+           <widget class="QLabel" name="selectedProcessingNameLabel">
             <property name="minimumSize">
              <size>
-              <width>220</width>
-              <height>0</height>
+              <width>0</width>
+              <height>26</height>
              </size>
             </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>26</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
             <property name="text">
-             <string>Choose new rating:</string>
+             <string/>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="processingRatingsCombobox">
-            <item>
-             <property name="text">
-              <string>5</string>
+           <widget class="QWidget" name="ratingContainerWidget" native="true">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>30</height>
+             </size>
+            </property>
+            <widget class="QWidget" name="layoutWidget">
+             <property name="geometry">
+              <rect>
+               <x>25</x>
+               <y>3</y>
+               <width>291</width>
+               <height>25</height>
+              </rect>
              </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>4</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>3</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>2</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>1</string>
-             </property>
-            </item>
+             <layout class="QHBoxLayout" name="horizontalLayout_8">
+              <item>
+               <widget class="QRadioButton" name="processingRating_1">
+                <property name="text">
+                 <string>1</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="processingRating_2">
+                <property name="text">
+                 <string>2</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="processingRating_3">
+                <property name="text">
+                 <string>3</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="processingRating_4">
+                <property name="text">
+                 <string>4</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="processingRating_5">
+                <property name="text">
+                 <string>5</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </widget>
+          </item>
+          <item>
+           <widget class="QTextEdit" name="processingRatingFeedbackText">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>66</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>66</height>
+             </size>
+            </property>
+            <property name="placeholderText">
+             <string>Type your feedback here</string>
+            </property>
            </widget>
           </item>
          </layout>
-        </item>
-        <item>
-         <widget class="QTextEdit" name="processingRatingFeedbackText">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>70</height>
-           </size>
-          </property>
-          <property name="placeholderText">
-           <string>Type your feedback here</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
