add tooltip on inactive submit rating button

--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -1298,6 +1298,9 @@
          <height>25</height>
         </rect>
        </property>
+       <property name="toolTip">
+        <string>Please select processing and rating to submit</string>
+       </property>
        <property name="text">
         <string>Submit</string>
        </property>
