--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -145,7 +145,7 @@
          <item>
           <widget class="QLabel" name="balanceLabel">
            <property name="text">
-            <string>   </string>
+            <string/>
            </property>
           </widget>
          </item>
@@ -214,7 +214,7 @@
          <item>
           <widget class="QLabel" name="labelAiModel">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -353,7 +353,7 @@
          <item>
           <widget class="QLabel" name="labelImagerySource">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -597,7 +597,7 @@
          </property>
          <property name="maximumSize">
           <size>
-           <width>200</width>
+           <width>500</width>
            <height>16777215</height>
           </size>
          </property>
