--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -509,6 +509,9 @@
            <property name="text">
             <string/>
            </property>
+           <property name="textFormat">
+            <enum>Qt::AutoText</enum>
+           </property>
            <property name="wordWrap">
             <bool>true</bool>
            </property>
