--- a/mapflow/dialogs/static/ui/main_dialog.ui
+++ b/mapflow/dialogs/static/ui/main_dialog.ui
@@ -81,7 +81,7 @@
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap>../icons/mapflow_logo.svg</pixmap>
+           <pixmap>../icons/mapflow_logo.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
